--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 markdown: GFM
 title: Implementing BDI Continual Temporal Planning for Robotic Agents
-description: Alex Zanetti, Devis Dal Moro, Redi Vreto, Marco Robol, Marco Roveri and Paolo Giorgini
+description: Alex Zanetti, Devis Dal Moro, Redi Vreto, Marco Robol, Marco Roveri and Paolo Giorgini - IROS 2023
